Theme/src/bcd/css/_styles.scss
/* ... */
.select {
  -webkit-touch-callout: text;
  -webkit-user-select: text;
  -khtml-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.bcdItalic {
  font-style: italic;
}

.bcdClosed,
.bcdHidden {
  display: none !important;
}

.bcdDisabled {
  text-decoration: none !important;
  color: $text-disabled-color !important;
  cursor: default !important;
}

.bcdInvalid {
  background-color: $invalid-color !important;
  color: text-contrast($invalid-color) !important;
}

@mixin bcdSelected($important:false) {
  @if $important == true {
    background-color: $select-color !important;
    color: $text-color-bright !important;
    border-color: $corporate-color-alt !important;
  }
  @else {
    background-color: $select-color;
    color: $text-color-bright;
    border-color: $corporate-color-alt !important;
  }
}

.bcdSelected {
  @include bcdSelected();
}

.bcdPlaceholder,
.bcdClearOption,
.bcdInputEmptyValue {
  color: lighten($text-color-dark, 50%) !important;
}

.statusNotReady,
.bcdLoading {
  background: url("../images/loading.gif") top left no-repeat;
}

/* indicating a component is busy and not ready to receive a user input */
.bcdIsBusy {
  cursor: wait;
}

/* deprecated; remove this since h1 is defined to be the ultimate title (html best practices) */
.bcdTitle {}

/*********************************************************************************************************************/
/* buttons */
/*********************************************************************************************************************/

.bcdButton {
  @extend .btn; // extend BS-default button
  background-color: $corporate-color;
  border-color: $corporate-color;
  font-weight: 600;
  padding: .4em 1.4em;
  cursor: pointer;
}
.bcdButton a {
  color: text-contrast($corporate-color);
}

#bcdDropDownButton {
  position: absolute;
  z-index:  $z-index-flyover;
}
#bcdDropDownButton {
  ul {
    padding: 0;
    margin: 0 0 0 -1.4em;
    list-style-type: none;
    li {
      margin-top: 0.1em;
    }
  }
}

/*********************************************************************************************************************/
/* Flyovers */
/*********************************************************************************************************************/

#bcdAutoCompletionBox,
#bcd_widget_suggestInput_dataList,
#bcdChartToolTip,
#bcdTooltipDiv {
  position: absolute;

  /* from bcd__form-control */
  background-color: #fff;
  color: #495057;
  padding: .3em .7em;
  font-size: 1em;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid $border-color;
}

#bcdWidgetBalloon {
  @include con_color($flyover-color);
  border: 1px solid $border-color;
  z-index: $z-index-balloon;
  position: fixed;
  padding: .5em;
  @include alpha(0.95);
  @include shadow();
}


#bcd_widget_suggestInput_dataList,
#bcdAutoCompletionBox {
  z-index: $z-index-autocomplete;
  height: 10em;
  overflow: auto;
}

#bcdChartToolTip,
#bcdTooltipDiv,
.ui-dialog {
  z-index: $z-index-flyover;
}

#bcd_widget_suggestInput_dataList {
  overflow-y: auto;
  div {
    white-space: nowrap;
    .bcdOptionIsHovered, .bcdOptionIsSelected {
      @include bcdSelected();
    }
  }
}

/*********************************************************************************************************************/
/* inputField Widget */
/*********************************************************************************************************************/

.bcdSuggestMatchPart {
  font-weight: bold;
}

.bcdComboInputField {
  position: relative;

  .form-control {
    padding-right: 2.5em;
    font:400 1em/1.5 $font-family-default;
  }

  @extend %fa-icon;
  @extend .fas;

  span {
    &:after {
      content: "\25BC";
      font-size:.5em;
      position: absolute;
      top: 0;
      right: 0;
      height: 100%;
      width: 2.2em;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
    }
  }
}

/*********************************************************************************************************************/
/* single / multiSelect Widget */
/*********************************************************************************************************************/

.bcdMultiSelect select {
  height: inherit;
  padding: 0 0 0 .6em;
}

.bcdSingleSelect,
.bcdMultiSelect {
  display: block;
  input[type='radio'],
  input[type='checkbox'] {
    margin: 0.2em;
  }
}

/*********************************************************************************************************************/
/* dim chooser */
/*********************************************************************************************************************/

.bcdDimensionChooser {
  table {
    border-collapse: separate;
   tbody tr td  {border: none; padding: 0; margin: 0; } 
  }

  div.bcdChooserCaption, div.bcdChooserCaptionFixed { display: none; }

  .bcdAdd { margin-right: 0.2em; }
  .bcdRemove { margin-left: 0.2em; }

  .bcdButton {
    @extend .btn-secondary;
    background-color: $secondary-button-color;
    border-color: $secondary-button-color;
    padding: .187em .38em;
    a {
      color: inherit;
      text-decoration: none;
    }
  }
  select {
    overflow-y: auto;
  }
}
/* ... */

